--- a/MVVM_Simple_Book/MVVM_Simple_Book/View/MainWindow.xaml
+++ b/MVVM_Simple_Book/MVVM_Simple_Book/View/MainWindow.xaml
@@ -4,9 +4,50 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVM_Simple_Book"
+        xmlns:viewModel="clr-namespace:MVVM_Simple_Book.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    
+    <!--первый способ привязки данных к виду-->
+    <!--<Window.DataContext>
+        <viewModel:MainWindowViewModel />
+    </Window.DataContext>-->
+    
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <ListBox ItemsSource="{Binding Path=Books}" SelectedItem="{Binding Path=SelectedBook, Mode=TwoWay}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Path=Title}">
+
+                    </TextBlock>
+                </DataTemplate>               
+            </ListBox.ItemTemplate>
+        </ListBox>       
+        <Grid Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Grid.Column="0" FontWeight="Bold">Автор:</TextBlock>
+            <TextBlock Grid.Row="1" Grid.Column="0" FontWeight="Bold">Название</TextBlock>
+            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Path=SelectedBook.Author}" />
+            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Path=SelectedBook.Title}" />
+        </Grid>
+        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <Button Command="{Binding Path=AddCommand}">Add</Button>
+            <Button Command="{Binding Path=RemoveCommand}">Delete</Button>
+        </StackPanel>
     </Grid>
 </Window>
