--- a/MVVM_Simple_Book/MVVM_Simple_Book/App.xaml
+++ b/MVVM_Simple_Book/MVVM_Simple_Book/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="MVVM_Simple_Book.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MVVM_Simple_Book.View"
-             StartupUri="View/MainWindow.xaml">
+             xmlns:local="clr-namespace:MVVM_Simple_Book.View"             
+             StartupUri="View/TextEditWindow.xaml">
+    <!--StartupUri="View/MainWindow.xaml">-->
     <Application.Resources>
          
     </Application.Resources>
